# xc17_prom_prog

./: README.md
csharp/: .gitignore  Makefile.am  configure.ac
csharp/snk/: xc17_prom_prog.snk
csharp/xc17_prom_prog/: InvalidResponseException.cs  Makefile.am  Program.cs  PromInfo.cs  PromProgrammer.cs  xc17_prom_prog.in
csharp/xc17_prom_prog/Properties/: AssemblyInfo.cs.in
ftdi/: xc17_prom_prog_ftdi_template.xml
hdl/: .gitignore  Makefile.am  configure.ac
hdl/src/: Makefile.am  config.vh.in  top.sv  uart_rx.sv  uart_tx.sv  xc17_prom_prog-constraints.py
hdl/src/boards/: hx8k_brk.pcf  xc17_prom_prog.pcf
pcb/lib/: FPGA_Lattice_ICE40HX1K.kicad_sym  Memory_ROM_XC17S00.kicad_sym  Regulator_Linear_LT3030.kicad_sym
pcb/xc17_prom_prog/: .gitignore  bom.ods  fpga.kicad_sch  fpga_power.kicad_sch  prom.kicad_sch  prom_power.kicad_sch  prom_power_gen.kicad_sch  prom_power_switch.kicad_sch  sym-lib-table  xc17_prom_prog.kicad_pcb  xc17_prom_prog.kicad_prl  xc17_prom_prog.kicad_pro  xc17_prom_prog.kicad_sch
