EXTRA_DIST =

COMPILE_TARGET = console
ASSEMBLY_COMPILER = CSC
CSC_ARGS = $(CSC_UNSAFE) $(CSC_STRONGNAME)

all: $(ASSEMBLY) $(LINUX_PKGCONFIG) $(ASSEMBLY_WRAPPER)

FILES = \
	InvalidResponseException.cs \
	Program.cs \
	PromInfo.cs \
	PromProgrammer.cs \
	Properties/AssemblyInfo.cs

DATA_FILES =

RESOURCES =

EXTRAS =

REFERENCES = \
	System

PROJECT_REFERENCES =

DLL_REFERENCES =

CLEANFILES =

include $(top_srcdir)/Makefile.include
